# MTFWBuilder

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.json.example  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  docker.env.example  pyproject.toml  requirements.txt
devices/: variants.yaml
mtfwbuilder/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rate_limit.py
mtfwbuilder/routers/: admin.py  config_generator.py  firmware_builder.py  pages.py
mtfwbuilder/services/: build_service.py  cleanup_service.py  device_registry.py  firmware_updater.py  jsonc_generator.py
nginx/: nginx.conf.example
static/css/: style.css
static/js/: main.js  timezone-data.js
templates/: admin.html  firmware_builder.html  index.html
templates/includes/: advanced_config.html  base.html  basic_info.html  channel_config.html  device_role.html  gps_config.html  lora_config.html  network_config.html
templates/partials/: build_progress.html
tests/: conftest.py  test_build_service.py  test_config_generator.py  test_device_registry.py  test_routes.py  test_security.py
utils/: firmware_updater.py  jsonc_generator.py
