[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtfwbuilder"
version = "2.0.0"
description = "Meshtastic firmware configuration generator and builder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Crank-Git" }]
keywords = ["meshtastic", "firmware", "configuration", "platformio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "bcrypt>=4.1.0",
    "itsdangerous>=2.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sse-starlette>=1.8.0",
    "slowapi>=0.1.9",
    "platformio>=6.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Crank-Git/MTFWBuilder"
Issues = "https://github.com/Crank-Git/MTFWBuilder/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.black]
line-length = 120
target-version = ["py310"]
